# atpl25-pub

./: README.md  exercise3.md
.github/workflows/: haskell.yml
HQPlayground/: hqp.cabal
HQPlayground/ZX-test/: ConverterTests.hs  ExtractTests.hs  Main.hs  SimplifyTests.hs
HQPlayground/exe/: Convert.hs  NoCloning.hs  TestRepeater.hs  Visualize.hs  YesTeleportation.hs
HQPlayground/src/HQP/HZX/: Syntax.hs
HQPlayground/src/HQP/PrettyPrint/: PrettyOp.hs
HQPlayground/src/HQP/QOp/: HelperFunctions.hs  MatrixSemantics.hs  Simplify.hs  Syntax.hs
HQPlayground/src/HQP/ZX/: Convert.hs  Counter.hs  Extract.hs  IdGenerator.hs  MatrixSemantics.hs  Simplify.hs  Syntax.hs  Utils.hs  Visualize.hs
HQPlayground/src/HQP/ZX/Tests/: Basic.hs  Main.hs
HQPlayground/src/Programs/: QFT.hs  QuantumAdder.hs  RepeaterProtocol.hs
code/exe/: Stabilizers.hs
