cabal-version:   3.4
name:            hqp
version:         0.1.0.0
synopsis:        HQP language playground in Haskell
license:         BSD-3-Clause
license-file:    LICENSE
author:          James Avery
maintainer:      avery@diku.dk
category:        Math
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall -Wno-orphans -Wno-unused-imports


common common-options
    default-language: GHC2021    
    default-extensions:
        NoMonomorphismRestriction,
        FlexibleContexts,
        FlexibleInstances,
        TypeFamilies,
        TypeSynonymInstances,
        BinaryLiterals,
        PatternSynonyms,
        ViewPatterns,
        LambdaCase,
        AllowAmbiguousTypes,
        TypeApplications,
        ScopedTypeVariables,
        GeneralizedNewtypeDeriving,
        OverloadedLists,
        DataKinds,

library core
    import:   warnings, common-options
    exposed-modules: 
      HQP
      HQP.QOp
      -- QOp syntax definitions and Operator typeclass:
      HQP.QOp.Syntax   
      -- QOp program transformations for optimization and analysis:
      HQP.QOp.Simplify 
      HQP.QOp.HelperFunctions
      -- HQP Semantics backend implementations:
      HQP.QOp.MatrixSemantics     
      HQP.QOp.TensorSemantics
      HQP.QOp.StabilizerSemantics 
      -- Pretty-printing HQP programs and representations:
      HQP.PrettyPrint
      HQP.PrettyPrint.PrettyOp
      HQP.PrettyPrint.PrettyMatrix
      -- ZX extension
      HQP.ZX.Syntax
      HQP.ZX.Simplify
      HQP.ZX.Convert
      HQP.ZX.Visualize
      -- Example quantum programs written in HQP:
      Programs.QFT
      Programs.QuantumAdder
      Programs.RepeaterProtocol

    other-modules:
      HQP.ZX.Utils,
      HQP.ZX.IdGenerator,
    build-depends:  
        base,
        hmatrix,
        random,
        mtl,
        algebraic-graphs,
        diagrams-svg,
        diagrams-lib,
        array,
        containers,
        massiv
--        hasktorch
    hs-source-dirs:   src

common exe-common
  hs-source-dirs: exe
  build-depends:
      base,
      hmatrix,
      hqp:core,
      diagrams-svg
  ghc-options: -Wall

test-suite ZX-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    other-modules:
        SimplifyTests,
        ConverterTests

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   ZX-test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.21.0.0,
        hqp:core,
        tasty,
        tasty-hunit,
        algebraic-graphs

executable Visualize
  import: exe-common
  main-is: Visualize.hs


executable Convert
  import: exe-common
  main-is: Convert.hs

-- executable YesTeleportation
--   import: exe-common
--   build-depends:
--     random
--   main-is: YesTeleportation.hs
executable ProgramInversion
  import: exe-common
  main-is: ProgramInversion.hs
  ghc-options:
      -Wno-missing-signatures
      -Wno-name-shadowing
      -Wno-incomplete-uni-patterns

executable YesTeleportation
  import: exe-common
  build-depends:
    random
  main-is: YesTeleportation.hs

executable TestRepeater
  import: exe-common
  main-is: TestRepeater.hs
  build-depends:
    random
  ghc-options:
      -Wno-missing-signatures
      -Wno-name-shadowing
      -Wno-incomplete-uni-patterns

